// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align bottom 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align bottom23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align bottom23456"
    />
  </div>
</div>
`;

exports[`align bottom wrap behavior 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align bottom wrap behavior23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align bottom wrap behavior23456"
    />
  </div>
</div>
`;

exports[`align middle 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align middle23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align middle23456"
    />
  </div>
</div>
`;

exports[`align middle wrap behavior 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align middle wrap behavior23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align middle wrap behavior23456"
    />
  </div>
</div>
`;

exports[`align top 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align top23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align top23456"
    />
  </div>
</div>
`;

exports[`align top wrap behavior 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-align top wrap behavior23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="align top wrap behavior23456"
    />
  </div>
</div>
`;

exports[`direction column 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-direction column23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="direction column23456"
    />
  </div>
</div>
`;

exports[`direction column-reverse 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-direction column-reverse23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="direction column-reverse23456"
    />
  </div>
</div>
`;

exports[`direction row 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-direction row23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="direction row23456"
    />
  </div>
</div>
`;

exports[`direction row-reverse 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-direction row-reverse23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="direction row-reverse23456"
    />
  </div>
</div>
`;

exports[`gutter as integer 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-gutter as integer23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="gutter as integer23456"
    />
  </div>
</div>
`;

exports[`gutter for col and row 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-gutter for col and row23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="gutter for col and row23456"
    />
  </div>
</div>
`;

exports[`gutter is object 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-gutter is object23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="gutter is object23456"
    />
  </div>
</div>
`;

exports[`justify center 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-justify center23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="justify center23456"
    />
  </div>
</div>
`;

exports[`justify end 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-justify end23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="justify end23456"
    />
  </div>
</div>
`;

exports[`justify space-around 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-justify space-around23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="justify space-around23456"
    />
  </div>
</div>
`;

exports[`justify space-between 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-justify space-between23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="justify space-between23456"
    />
  </div>
</div>
`;

exports[`justify start 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-justify start23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="justify start23456"
    />
  </div>
</div>
`;

exports[`overflow hidden 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-overflow hidden23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="overflow hidden23456"
    />
  </div>
</div>
`;

exports[`overflow scroll 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-overflow scroll23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="overflow scroll23456"
    />
  </div>
</div>
`;

exports[`overflow visible 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-overflow visible23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="overflow visible23456"
    />
  </div>
</div>
`;

exports[`wrap nowrap 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-wrap nowrap23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="wrap nowrap23456"
    />
  </div>
</div>
`;

exports[`wrap wrap-reverse 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-wrap wrap-reverse23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="wrap wrap-reverse23456"
    />
  </div>
</div>
`;
